# discord-bot

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/: main.py
src/anki_discord/: __init__.py  anki.py  discord.py  english.py  main.py  settings.py
src/bot/: anki.py  anki_connect.py  anki_gpt.py  discord_event.py  english.py  settings.py
