[project]
name = "anki-discord"
version = "0.1.0"
description = "This is a Discord app that automatically adds words to Anki"
authors = [
    { name = "ue-sho", email = "tssu45@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "gtts>=2.5.3",
    "discord-py>=2.4.0",
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "tenacity>=9.0.0",
    "openai>=1.52.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "mypy>=1.12.0",
    "types-requests>=2.32.0.20241016",
    "types-beautifulsoup4>=4.12.0.20241020",
    "pytest>=8.3.2",
    "ruff>=0.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
extend-select = ["I"]